# Shared_Types

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  VersionConfig.h.in  main.cpp
apps/: CMakeLists.txt  main.cpp
cmake/: ExternLibs.cmake  extern_libs.cmake
include/: CMakeLists.txt
include/shared_types/: Control.h  ControlSerializer.hpp  CurrentRegime.h  CurrentRegimeSerializer.hpp  CustomRegime.h  CustomRegimeSerializer.hpp  Regime.h  RegimeId.h  RegimeIdSerializer.hpp  RegimeName.h  RegimeNameSerializer.hpp  RegimeProperty.h  RegimePropertySerializer.hpp  RegimeRange.h  RegimeRangeSerializer.hpp  RegimeSerializer.hpp  RegimeValue.h  RegimeValueSerializer.hpp  Regimes.h  RegimesSerializer.hpp  SavedRegimes.h  SavedRegimesSerializer.hpp  SensorData.h  SensorDataSerializer.hpp  TerrariumData.h  TerrariumDataSerializer.hpp
src/: CMakeLists.txt  Control.cpp  CurrentRegime.cpp  CustomRegime.cpp  Regime.cpp  RegimeId.cpp  RegimeName.cpp  RegimeProperty.cpp  RegimeRange.cpp  RegimeValue.cpp  Regimes.cpp  SavedRegimes.cpp  SensorData.cpp  TerrariumData.cpp
src/shared_types/models/: Control.cpp  Control.h
src/shared_types/serializers/: ControlSerializer.hpp
tests/: CMakeLists.txt
tests/include/shared_types_tests/: TestsUtility.hpp
tests/json_files/: Control.json  CurrentRegime.json  CustomRegime.json  Regime.json  RegimeName.json  RegimeProperty.json  RegimeRange.json  RegimeValue.json  Regimes.json  SavedRegimes.json  SensorData.json  TerrariumData.json
tests/serializers/: ControlSerializerTest.cpp  CurrentRegimeSerializerTest.cpp  CustomRegimeSerializerTest.cpp  RegimeIdSerializerTest.cpp  RegimeNameSerializerTest.cpp  RegimePropertySerializerTest.cpp  RegimeRangeSerializerTest.cpp  RegimeSerializerTest.cpp  RegimeValueSerializerTest.cpp  RegimesSerializerTest.cpp  SavedRegimesSerializerTest.cpp  SensorDataSerializerTest.cpp  TerrariumDataSerializerTest.cpp
tests/shared_types_tests/: TestsUtility.cpp  TestsUtility.h
tests/test_serializers/: ControlSerializerTest.cpp
